--- a/forms.html
+++ b/forms.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h2>Password:</h2>
+    <h2><strong>Password:</strong></h2>
     <form>
         <!-- Email  -->
         <label for="Email">Email:</label>
